# presentation-slides

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  run-slides.sh
hyperon_whitepaper_slides/: phase1_mathematical_foundations.py  phase2_core_infrastructure.py  phase3_primus_cognitive.py  phase4_advanced_primus.py  phase5_neural_symbolic.py  phase6_self_modification_asi.py  phase7_8_9_applications_roadmap_synthesis.py  slide1_hyperon_intro.py  slide2_phase1_foundations.py  slide3_atomspace.py  slide_2_reference.md
slides/: ArchitectureSlide.json  AtomspaceSlide1.json  AtomspaceSlide2.json  AtomspaceSlide3.json  AtomspaceSlide4.json  EnvironmentCoherenceSlide.json  EvaluationMetricsSlide.json  FinalConclusion.json  HyperClawArchitecturePillars.json  HyperClawAttentionLoops.json  HyperClawOrchestrationLayer.json  HyperClawQuoteBridge.json  HyperClawUseCasesAndEvolution.json  HyperonWhitePaperTitleSlide.json  LengthBarrierSlide.json  MigrationSlide.json  MoERoutingSlide.json  OptimizationComputeSlide.json  OptimizationSlide.json  Phase1ActiveInferenceLoopSlide.json  Phase1BackdoorAdjustmentSlide.json  Phase1BinaryEdgesNotEnoughSlide.json  Phase1CausalCodingSimpsonSlide.json  Phase1ContentAddressing.json  Phase1ContentAddressingSlide.json  Phase1DoCalculusSurgerySlide.json  Phase1ExpectedTruthDecisionSlide.json  Phase1GraphLimitsAndFirstClassSlide.json  Phase1HierarchicalIndexingSlide.json  Phase1HypergraphSlide.json  Phase1Hypergraphs.json  Phase1HypergraphsSlide.json  Phase1ImmutabilityVersioningSlide.json  Phase1LatticeHierarchySlide.json  Phase1LatticeOperationsSlide.json  Phase1MerkleDagPathMapSlide.json  (+78 more)
