[project]
name = "presentations"
version = "0.1.0"
description = "Manim and manim-slides presentation deck"
requires-python = ">=3.14"
dependencies = [
  "annotated-types==0.7.0",
  "audioop-lts==0.2.2",
  "av==17.0.0",
  "beautifulsoup4==4.14.3",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.7",
  "click==8.3.2",
  "click-default-group==1.2.4",
  "cloup==3.0.9",
  "decorator==5.2.1",
  "glcontext==3.0.0",
  "idna==3.11",
  "isosurfaces==0.1.2",
  "jinja2==3.1.6",
  "lxml==6.0.2",
  "manim==0.20.1",
  "manim-slides==5.5.4",
  "manimpango==0.6.1",
  "mapbox-earcut==2.0.0",
  "markdown-it-py==4.0.0",
  "markupsafe==3.0.3",
  "mdurl==0.1.2",
  "moderngl==5.12.0",
  "moderngl-window==3.1.1",
  "networkx==3.6.1",
  "numpy==2.4.4",
  "packaging==26.0",
  "pillow==12.2.0",
  "pycairo==1.29.0",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pydantic-extra-types==2.11.2",
  "pydub==0.25.1",
  "pyglet==2.1.14",
  "pyglm==2.8.3",
  "pygments==2.20.0",
  "pyside6==6.11.0",
  "pyside6-addons==6.11.0",
  "pyside6-essentials==6.11.0",
  "python-pptx==1.0.2",
  "qtpy==2.4.3",
  "requests==2.33.1",
  "rich==14.3.3",
  "rtoml==0.13.0",
  "scipy==1.17.1",
  "screeninfo==0.8.1",
  "shiboken6==6.11.0",
  "skia-pathops==0.9.2",
  "soupsieve==2.8.3",
  "srt==3.5.3",
  "svgelements==1.9.6",
  "tqdm==4.67.3",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "urllib3==2.6.3",
  "watchdog==6.0.0",
  "xlsxwriter==3.2.9",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
